tests/NormalTests/paczka1/fuzzy1/74384618.err
Error in line 1: n7FrIpbs9GL A57 58,3
Error in line 2: n7FrIpbs9GL S918 37,6
Error in line 6: t4GT A57 5,8
Error in line 15: 2SVuWibI S725 145,90
Error in line 12: 2SVuWibI S725 68,4
Error in line 16: t4GT S918 194,2
Error in line 19: 7ZLq1 S918 9,4
